@@ -31,6 +31,8 @@ Incompatible changes
   node_id for cross reference
 * #7229: rst domain: Non intended behavior is removed such as ``numref_`` links
   to ``.. rst:role:: numref``
+* #6903: py domain: Internal data structure has changed. Now modules have
+  node_id for cross reference
 
 Deprecated
 ----------
